Fix feature group name for weather data to be consistent

--- a/notebooks/airquality/1_air_quality_feature_backfill.ipynb
+++ b/notebooks/airquality/1_air_quality_feature_backfill.ipynb
@@ -977,7 +977,7 @@
    "source": [
     "# Get or create feature group \n",
     "weather_fg = fs.get_or_create_feature_group(\n",
-    "    name=f'weather_{city}',\n",
+    "    name='weather',\n",
     "    description='Weather characteristics of each day',\n",
     "    version=1,\n",
     "    primary_key=['city'],\n",
