Enhance air quality notebooks and Makefile for multi-day processing
- Updated Makefile to include new multi-feature, train, and inference targets that accept a DAYS_AGO parameter.
- Modified 1_air_quality_feature_backfill.ipynb to handle DAYS_AGO input and adjust date calculations accordingly.
- Adjusted 2_air_quality_feature_pipeline.ipynb to incorporate DAYS_AGO for date calculations and added localization for 'date' columns.
- Cleaned up 4_air_quality_batch_inference.ipynb by removing redundant date calculations and integrating DAYS_AGO handling.
- Added error handling for timezone localization of 'date' columns in both 2_air_quality_feature_pipeline.ipynb and 4_air_quality_batch_inference.ipynb.

--- a/notebooks/airquality/1_air_quality_feature_backfill.ipynb
+++ b/notebooks/airquality/1_air_quality_feature_backfill.ipynb
@@ -284,8 +284,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "today = datetime.date.today()\n",
-    "\n",
     "csv_file=f\"{root_dir}/data/air-quality-data.csv\"\n",
     "util.check_file_path(csv_file)\n",
     "\n",
@@ -295,7 +293,8 @@
     "    sys.exit(1)\n",
     "\n",
     "AQICN_API_KEY = settings.AQICN_API_KEY.get_secret_value() \n",
-    "if len(sys.argv) > 2:\n",
+    "print(len(sys.argv), 60*\"*\")\n",
+    "if len(sys.argv) > 3:\n",
     "\n",
     "    csv_file = sys.argv[1]\n",
     "    # If csv_file is just a filename, look for it in the data/ directory\n",
@@ -319,6 +318,7 @@
     "    street = sys.argv[5] if len(sys.argv) > 5 else None\n",
     "    latitude = sys.argv[6] if len(sys.argv) > 6 else None\n",
     "    longitude = sys.argv[7] if len(sys.argv) > 7 else None\n",
+    "    days_ago = int(sys.argv[8]) if len(sys.argv) > 8 else 0\n",
     "    print(f\"Using command-line arguments:\")\n",
     "    print(f\"  CSV      = {csv_file}\")\n",
     "    print(f\"  URL      = {aqicn_url}\")\n",
@@ -337,7 +337,9 @@
     "    # Uncomment this if API call to get longitude and latitude\n",
     "    latitude = \"59.314017450051836\"\n",
     "    longitude = \"18.075630285191593\"\n",
+    "    days_ago = 0\n",
     "\n",
+    "today = datetime.date.today() - datetime.timedelta(days=days_ago)\n",
     "\n",
     "print(f\"Found AQICN_API_KEY: {AQICN_API_KEY}\")\n",
     "\n",
@@ -716,6 +718,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## 1. Localize the 'date' column in place by assignment\n",
+    "try:   \n",
+    "    weather_df['date'] = weather_df['date'].dt.tz_localize('UTC')\n",
+    "except Exception as e:\n",
+    "    print(f\"Warning: could not localize weather_df['date']: {e}\")\n",
+    "\n",
+    "## 2. Localize the 'date' column in the second DataFrame by assignment\n",
+    "try:\n",
+    "    df_feat['date'] = df_feat['date'].dt.tz_localize('UTC')\n",
+    "except Exception as e:\n",
+    "    print(f\"Warning: could not localize df_feat['date']: {e}\")\n",
+    "\n",
+    "## 3. Now the columns match and the merge will proceed correctly\n",
     "weather_df = pd.merge(weather_df, df_feat, on=['city', 'date'], how='outer')"
    ]
   },
