--- a/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
+++ b/notebooks/airquality/2_air_quality_feature_pipeline.ipynb
@@ -148,6 +148,7 @@
     "    street = sys.argv[5] if len(sys.argv) > 5 else None\n",
     "    latitude = sys.argv[6] if len(sys.argv) > 6 else None\n",
     "    longitude = sys.argv[7] if len(sys.argv) > 7 else None\n",
+    "    days_ago = int(sys.argv[8]) if len(sys.argv) > 8 else 0\n",
     "    print(f\"Using command-line arguments:\")\n",
     "    print(f\"  CSV      = {csv_file}\")\n",
     "    print(f\"  URL      = {aqicn_url}\")\n",
@@ -166,9 +167,10 @@
     "    aqicn_url=location['aqicn_url']\n",
     "    latitude=location['latitude']\n",
     "    longitude=location['longitude']\n",
+    "    days_ago=0\n",
     "    print(location_str)\n",
     "\n",
-    "today = datetime.date.today()\n",
+    "today = datetime.date.today() - datetime.timedelta(days=days_ago)\n",
     "\n"
    ]
   },
@@ -374,6 +376,26 @@
     "    df_feat = pd.DataFrame({**pct_change_features, **std_features}, index=[0])\n",
     "    df_feat['city'] = city\n",
     "    df_feat[\"date\"] = pd.to_datetime(today)  # Convert date to timestamp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81b615da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 1. Localize the 'date' column in place by assignment\n",
+    "try:   \n",
+    "    daily_df['date'] = daily_df['date'].dt.tz_localize('UTC')\n",
+    "except Exception as e:\n",
+    "    print(f\"Warning: could not localize weather_df['date']: {e}\")\n",
+    "\n",
+    "## 2. Localize the 'date' column in the second DataFrame by assignment\n",
+    "try:\n",
+    "    df_feat['date'] = df_feat['date'].dt.tz_localize('UTC')\n",
+    "except Exception as e:\n",
+    "    print(f\"Warning: could not localize df_feat['date']: {e}\")"
    ]
   },
   {
