--- a/notebooks/airquality/4_air_quality_batch_inference.ipynb
+++ b/notebooks/airquality/4_air_quality_batch_inference.ipynb
@@ -94,11 +94,7 @@
    "id": "bcfd27c1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "today = datetime.datetime.now() - datetime.timedelta(0)\n",
-    "tomorrow = today + datetime.timedelta(days = 1)\n",
-    "today"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -143,6 +139,7 @@
     "    street = sys.argv[5] if len(sys.argv) > 5 else None\n",
     "    # latitude = sys.argv[6] if len(sys.argv) > 6 else None\n",
     "    # longitude = sys.argv[7] if len(sys.argv) > 7 else None\n",
+    "    days_ago = int(sys.argv[8]) if len(sys.argv) > 8 else 0\n",
     "    print(f\"Using command-line arguments:\")\n",
     "    print(f\"  CSV      = {csv_file}\")\n",
     "    # print(f\"  URL      = {aqicn_url}\")\n",
@@ -156,7 +153,10 @@
     "    location = json.loads(location_str)\n",
     "    country=location['country']\n",
     "    city=location['city']\n",
-    "    street=location['street']"
+    "    street=location['street']\n",
+    "today = datetime.date.today() - datetime.timedelta(days=days_ago)\n",
+    "tomorrow = today + datetime.timedelta(days = 1)\n",
+    "today"
    ]
   },
   {
@@ -439,7 +439,19 @@
    "outputs": [],
    "source": [
     "outcome_df = air_quality_df[['date', 'pm25']]\n",
-    "preds_df =  monitoring_df[['date', 'predicted_pm25']]\n",
+    "preds_df =  monitoring_df[['date', 'predicted_pm25']]## 1. Localize the 'date' column in place by assignment\n",
+    "try:   \n",
+    "    preds_df['date'] = preds_df['date'].dt.tz_localize('UTC')\n",
+    "except Exception as e:\n",
+    "    print(f\"Warning: could not localize weather_df['date']: {e}\")\n",
+    "\n",
+    "## 2. Localize the 'date' column in the second DataFrame by assignment\n",
+    "try:\n",
+    "    outcome_df['date'] = outcome_df['date'].dt.tz_localize('UTC')\n",
+    "except Exception as e:\n",
+    "    print(f\"Warning: could not localize df_feat['date']: {e}\")\n",
+    "\n",
+    "\n",
     "\n",
     "hindcast_df = pd.merge(preds_df, outcome_df, on=\"date\")\n",
     "hindcast_df = hindcast_df.sort_values(by=['date'])\n",
